Fix overflow bug, limit number length to 7 characters

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
 
 
 .calc {
-    width: 400px;
+    min-width: 400px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -39,7 +39,7 @@ button {
 }
 
 .display {
-    width: 400px;
+    min-width: 400px;
     height: 125px;
     background-color: grey;
     display: flex;
